# rag-saldivia

./: .cgcignore  .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .golangci.yml  .mcp.json  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bunfig.toml  cliff.toml  commitlint.config.js  docker-compose.yml  go.mod  go.work  go.work.sum  knip.json  package.json  pyproject.toml  turbo.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.cursor/: mcp.json.example  settings.json
.factory/: init.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.intranet-scrape/: db-schema.sql  db-tables.txt  download-js.py  intranet-all-menu-items.json  intranet-all-xmls.json  intranet-full-structure.json  intranet-menu-handlers.json  intranet-principal-full.html  intranet-principal-map.json  intranet-xml-test-fetch.json  intranet-xml-urls.json  js-inventory.json  scrape.py  scrape2.py
.repowise/: mcp.json
_archive/: .lintstagedrc.js  README.md  docker-compose-1.0.x.yml  knip.json  package.json.1.0.x
analisis/: 00-indice.md  01-resumen-ejecutivo.md  03-base-de-datos.md  04-seguridad-y-auth.md  05-api-y-actions.md  06-componentes.md  07-packages.md  08-streaming-y-rag.md  09-testing.md  11-roadmap.md  12-patrones-y-convenciones.md  13-infraestructura.md  14-mapa-de-archivos.md  15-agentes-y-workflow.md  16-rendimiento.md  17-riesgos-y-deuda-tecnica.md  18-benchmark-externo.md  19-sota-saldivia-rag.md
cli/: __init__.py  (+3 more)
(+8008 files in other folders)
